test/tests/errors/error-cont-non-loc.sm
// true
// false
/**/
/**/

program {
    const x = 1;
    var y = cont x;
}